data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1106.wast
;; 7. **Test Seven**:    - `br_table` with an index halfway through the table combined with a sequence of `br` and `br_if` instructions within the loop.    - **Constraint**: Checks if mixed branches affect the resolution of indices and stack state management.    - **Relation**: Tests robustness against varied branch instructions with loops.

(assert_invalid
  (module
    (func $mixed-branches-loop (result i32)
      (block $outer
        (loop $inner (result i32)
          (i32.const 0)
          (br_table $outer $inner (i32.const 1))
          (br_if $inner (i32.const 0))
          (i32.const 42)
          (br $outer)
        )
      )
    )
  )
  "type mismatch"
)